# toml-test-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: renovate.json5  settings.yml
.github/workflows/: audit.yml  ci.yml  rust-next.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/data/: Cargo.toml  README.md
crates/data/src/: lib.rs
crates/harness/: Cargo.toml  README.md
crates/harness/src/: lib.rs
crates/toml-test/: CHANGELOG.md  Cargo.toml  README.md
crates/toml-test-data/: Cargo.toml  README.md
crates/toml-test-data/examples/: dump.rs
crates/toml-test-data/src/: lib.rs
crates/toml-test-data/tests/: test.rs
crates/toml-test-harness/: Cargo.toml  README.md
crates/toml-test-harness/src/: lib.rs
crates/toml-test/src/: decoded.rs  error.rs  lib.rs  verify.rs
crates/toml-test/tests/: decoded.rs  encoded.rs
src/: decoded.rs  encoded.rs  error.rs  lib.rs  verify.rs
tests/: encoded.rs
