[workspace]
members = [
    "crates/data",
    "crates/cli",
    "crates/harness",
]

[package]
name = "toml-test"
version = "0.3.1"
description = "Verify Rust TOML parsers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/epage/toml-test-rs"
documentation = "http://docs.rs/toml-test"
readme = "README.md"
categories = ["development-tools:testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/epage/git-stack/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
toml-test-data = { version = "1", path = "crates/data" }
