[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.67"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "toml-test"
version = "0.3.7"
description = "Verify Rust TOML parsers"
repository = "https://github.com/epage/toml-test-rs"
documentation = "http://docs.rs/toml-test"
readme = "README.md"
categories = ["development-tools:testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/epage/git-stack/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.22", default-features = false, features = ["std"] }
ryu = "1.0.15"

[dev-dependencies]
toml-test-data = { version = "1", path = "crates/data" }
