[package]
name = "toml-test-cli"
version = "0.3.1"
description = "Verify Rust TOML parsers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/epage/toml-test-rs"
readme = "README.md"
categories = ["development-tools:testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[[bin]]
name = "toml-test"
path = "src/main.rs"

[dependencies]
toml-test-data = { version = "1.0", path = "../data" }
toml-test = { version = "^0.3", path = "../../" }
clap = { version = "4.0.8", features = ["derive"] }
proc-exit = "2.0.0"
ignore = "0.4.18"
eyre = "0.6.8"
log = "0.4.17"
clap-verbosity-flag = "2.0.0"
env_logger = { version = "0.9.1", default-features = false, features = ["termcolor"] }
