[package]
name = "toml-test-data"
version = "1.3.0"
description = "TOML test cases"
repository = "https://github.com/epage/toml-test-rs"
readme = "README.md"
categories = ["development-tools:testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
include_dir = "0.7.0"
