[package]
name = "toml-test-data"
version = "1.12.1"
description = "TOML test cases"
repository = "https://github.com/epage/toml-test-rs"
readme = "README.md"
categories = ["development-tools::testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "assets/**/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
include_dir = "0.7.0"

[lints]
workspace = true
