[package]
name = "toml-test-harness"
version = "0.4.10"
description = "Cargo test harness for verifying TOML parsers"
readme = "README.md"
categories = ["development-tools::testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
toml-test-data = { version = "1.13.0", path = "../data" }
toml-test = { version = "^1.0.2", path = "../../" }
ignore = "0.4.18"
libtest-mimic = "0.7.0"

[lints]
workspace = true
