[package]
name = "toml-test-harness"
version = "1.3.2"
description = "Cargo test harness for verifying TOML parsers"
categories = ["development-tools::testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
snapshot = ["dep:snapbox"]

[dependencies]
toml-test-data = { version = "2.3.2", path = "../toml-test-data" }
toml-test = { version = "^2.0.2", path = "../toml-test" }
ignore = "0.4.20"
libtest-mimic = "0.7.0"
snapbox = { version = "0.6.21", optional = true }

[lints]
workspace = true
