[package]
name = "toml-test-harness"
version = "1.6.0"
description = "Cargo test harness for verifying TOML parsers"
categories = ["development-tools::testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
snapshot = ["dep:snapbox"]

[dependencies]
toml-test-data = { version = "2.6.0", path = "../toml-test-data" }
toml-test = { version = "^2.1.0", path = "../toml-test" }
ignore = "0.4.25"
libtest2-mimic = "0.0.4"
snapbox = { version = "1.1.0", optional = true }

[lints]
workspace = true
