[package]
name = "toml-test"
version = "2.0.0"
description = "Verify Rust TOML parsers"
documentation = "http://docs.rs/toml-test"
readme = "README.md"
categories = ["development-tools::testing", "text-processing", "encoding"]
keywords = ["development", "toml"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/epage/git-stack/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4.40", default-features = false, features = ["std"] }
ryu = "1.0.20"

[dev-dependencies]
toml-test-data = { version = "2.1.0", path = "../toml-test-data" }

[lints]
workspace = true
